| Summary: | ASTERISK-25669: [patch]CURL incorrect trim for non ASCII characters | ||
| Reporter: | Jesper (ib2) | Labels: | |
| Date Opened: | 2016-01-08 02:33:53.000-0600 | Date Closed: | 2016-07-15 06:40:50 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Functions/func_curl Functions/func_strings |
| Versions: | 11.20.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | CentOs 6.7 | Attachments: | ( 0) strings.curl.trim.patch |
| Description: | CURL removes all non ASCII characters if string ends with non ASCII characters
content of test.txt: {noformat} abcæøå {noformat} snip of test dialplan in extensions.ael: {noformat} Set(HTTPANSWER=${CURL(http://localhost/test.txt)}); {noformat} verbose log: {noformat} -- Executing [] Set("Local/999", "HTTPANSWER=abc") {noformat} *After patch* verbose log: {noformat} -- Executing [] Set("Local/999", "HTTPANSWER=abcæøå") {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-01-08 02:33:55.666-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2016-01-11 11:13:02.531-0600 Once you've followed the Code Review process [1] and submitted your code to Gerrit [2] be sure to edit this JIRA issue and add the Gerrit review URL in the appropriate field. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Code+Review [2] https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage | ||